// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphView renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0)",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
    }
  }
  testID="graphView"
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": "80%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 16,
              "marginVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            bbHeight={230}
            bbWidth={375}
            focusable={false}
            height={230}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 230,
                  "width": 375,
                },
              ]
            }
            width={375}
          >
            <RNSVGGroup>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "backgroundGradient",
                  ]
                }
                fillOpacity={1}
                height={230}
                propList={
                  Array [
                    "fill",
                    "fillOpacity",
                  ]
                }
                rx={16}
                ry={16}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGGroup>
                <RNSVGRect
                  fill={4290898173}
                  height={16}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rx={8}
                  ry={8}
                  width={16}
                  x={141.5}
                  y={7}
                />
                <RNSVGText
                  content={null}
                  dx={Array []}
                  dy={Array []}
                  fill={3422552064}
                  font={
                    Object {
                      "fontSize": 12,
                    }
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotate={Array []}
                  x={
                    Array [
                      161.5,
                    ]
                  }
                  y={
                    Array [
                      19.5,
                    ]
                  }
                >
                  <RNSVGTSpan
                    content="Heart Rate"
                    dx={Array []}
                    dy={Array []}
                    font={Object {}}
                    rotate={Array []}
                    x={Array []}
                    y={Array []}
                  />
                </RNSVGText>
              </RNSVGGroup>
              <RNSVGGroup
                matrix={
                  Array [
                    1,
                    0,
                    -0,
                    1,
                    0,
                    30,
                  ]
                }
              >
                <RNSVGDefs>
                  <RNSVGLinearGradient
                    gradient={
                      Array [
                        0,
                        -1359820,
                        1,
                        -1359820,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={1}
                    name="backgroundGradient"
                    x1={0}
                    x2={375}
                    y1={200}
                    y2={0}
                  />
                  <RNSVGLinearGradient
                    gradient={
                      Array [
                        0,
                        -2134775555,
                        1,
                        448915709,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={1}
                    name="fillShadowGradientFrom_0"
                    x1={0}
                    x2={0}
                    y1={0}
                    y2={200}
                  />
                </RNSVGDefs>
                <RNSVGGroup>
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={16}
                    y2={16}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={53.5}
                    y2={53.5}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={91}
                    y2={91}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={128.5}
                    y2={128.5}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={166}
                    y2={166}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        166,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="80.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        128.5,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="85.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        91,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="90.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        53.5,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="95.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        16,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="100.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={64}
                    y1={0}
                    y2={166}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={167}
                    x2={167}
                    y1={0}
                    y2={166}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={271}
                    x2={271}
                    y1={0}
                    y2={166}
                  />
                </RNSVGGroup>
                <RNSVGGroup />
                <RNSVGGroup>
                  <RNSVGPath
                    d="M64 16 167.66666666666669 91 271.33333333333337 166"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4290898173}
                    strokeWidth={3}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGPath
                    d="M64 16 167.66666666666669 91 271.33333333333337 166 271.33333333333337 166 64 166z"
                    fill={
                      Array [
                        1,
                        "fillShadowGradientFrom_0",
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                        "strokeWidth",
                      ]
                    }
                    strokeWidth={0}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGCircle
                    cx={64}
                    cy={16}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={64}
                    cy={16}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                  <RNSVGCircle
                    cx={167.66666666666669}
                    cy={91}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={167.66666666666669}
                    cy={91}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                  <RNSVGCircle
                    cx={271.33333333333337}
                    cy={166}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={271.33333333333337}
                    cy={166}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                </RNSVGGroup>
                <RNSVGGroup />
                <RNSVGGroup />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": "80%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 16,
              "marginVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            bbHeight={230}
            bbWidth={375}
            focusable={false}
            height={230}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 230,
                  "width": 375,
                },
              ]
            }
            width={375}
          >
            <RNSVGGroup>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "backgroundGradient",
                  ]
                }
                fillOpacity={1}
                height={230}
                propList={
                  Array [
                    "fill",
                    "fillOpacity",
                  ]
                }
                rx={16}
                ry={16}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGGroup>
                <RNSVGRect
                  fill={4290898173}
                  height={16}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rx={8}
                  ry={8}
                  width={16}
                  x={123.5}
                  y={7}
                />
                <RNSVGText
                  content={null}
                  dx={Array []}
                  dy={Array []}
                  fill={3422552064}
                  font={
                    Object {
                      "fontSize": 12,
                    }
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotate={Array []}
                  x={
                    Array [
                      143.5,
                    ]
                  }
                  y={
                    Array [
                      19.5,
                    ]
                  }
                >
                  <RNSVGTSpan
                    content="Respiration Rate"
                    dx={Array []}
                    dy={Array []}
                    font={Object {}}
                    rotate={Array []}
                    x={Array []}
                    y={Array []}
                  />
                </RNSVGText>
              </RNSVGGroup>
              <RNSVGGroup
                matrix={
                  Array [
                    1,
                    0,
                    -0,
                    1,
                    0,
                    30,
                  ]
                }
              >
                <RNSVGDefs>
                  <RNSVGLinearGradient
                    gradient={
                      Array [
                        0,
                        -1197995,
                        1,
                        -1197995,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={1}
                    name="backgroundGradient"
                    x1={0}
                    x2={375}
                    y1={200}
                    y2={0}
                  />
                  <RNSVGLinearGradient
                    gradient={
                      Array [
                        0,
                        -2134775555,
                        1,
                        448915709,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={1}
                    name="fillShadowGradientFrom_0"
                    x1={0}
                    x2={0}
                    y1={0}
                    y2={200}
                  />
                </RNSVGDefs>
                <RNSVGGroup>
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={16}
                    y2={16}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={53.5}
                    y2={53.5}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={91}
                    y2={91}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={128.5}
                    y2={128.5}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={166}
                    y2={166}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        166,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="75.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        128.5,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="80.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        91,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="85.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        53.5,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="90.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        16,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="95.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={64}
                    y1={0}
                    y2={166}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={167}
                    x2={167}
                    y1={0}
                    y2={166}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={271}
                    x2={271}
                    y1={0}
                    y2={166}
                  />
                </RNSVGGroup>
                <RNSVGGroup />
                <RNSVGGroup>
                  <RNSVGPath
                    d="M64 16 167.66666666666669 91 271.33333333333337 166"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4290898173}
                    strokeWidth={3}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGPath
                    d="M64 16 167.66666666666669 91 271.33333333333337 166 271.33333333333337 166 64 166z"
                    fill={
                      Array [
                        1,
                        "fillShadowGradientFrom_0",
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                        "strokeWidth",
                      ]
                    }
                    strokeWidth={0}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGCircle
                    cx={64}
                    cy={16}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={64}
                    cy={16}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                  <RNSVGCircle
                    cx={167.66666666666669}
                    cy={91}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={167.66666666666669}
                    cy={91}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                  <RNSVGCircle
                    cx={271.33333333333337}
                    cy={166}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={271.33333333333337}
                    cy={166}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                </RNSVGGroup>
                <RNSVGGroup />
                <RNSVGGroup />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": "80%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 16,
              "marginVertical": 8,
            }
          }
        >
          <RNSVGSvgView
            bbHeight={230}
            bbWidth={375}
            focusable={false}
            height={230}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 230,
                  "width": 375,
                },
              ]
            }
            width={375}
          >
            <RNSVGGroup>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "backgroundGradient",
                  ]
                }
                fillOpacity={1}
                height={230}
                propList={
                  Array [
                    "fill",
                    "fillOpacity",
                  ]
                }
                rx={16}
                ry={16}
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGGroup>
                <RNSVGRect
                  fill={4290898173}
                  height={16}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rx={8}
                  ry={8}
                  width={16}
                  x={135.5}
                  y={7}
                />
                <RNSVGText
                  content={null}
                  dx={Array []}
                  dy={Array []}
                  fill={3422552064}
                  font={
                    Object {
                      "fontSize": 12,
                    }
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotate={Array []}
                  x={
                    Array [
                      155.5,
                    ]
                  }
                  y={
                    Array [
                      19.5,
                    ]
                  }
                >
                  <RNSVGTSpan
                    content="Oxygen Level"
                    dx={Array []}
                    dy={Array []}
                    font={Object {}}
                    rotate={Array []}
                    x={Array []}
                    y={Array []}
                  />
                </RNSVGText>
              </RNSVGGroup>
              <RNSVGGroup
                matrix={
                  Array [
                    1,
                    0,
                    -0,
                    1,
                    0,
                    30,
                  ]
                }
              >
                <RNSVGDefs>
                  <RNSVGLinearGradient
                    gradient={
                      Array [
                        0,
                        -9512992,
                        1,
                        -9512992,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={1}
                    name="backgroundGradient"
                    x1={0}
                    x2={375}
                    y1={200}
                    y2={0}
                  />
                  <RNSVGLinearGradient
                    gradient={
                      Array [
                        0,
                        -2134775555,
                        1,
                        448915709,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={1}
                    name="fillShadowGradientFrom_0"
                    x1={0}
                    x2={0}
                    y1={0}
                    y2={200}
                  />
                </RNSVGDefs>
                <RNSVGGroup>
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={16}
                    y2={16}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={53.5}
                    y2={53.5}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={91}
                    y2={91}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={128.5}
                    y2={128.5}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={375}
                    y1={166}
                    y2={166}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        166,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="30.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        128.5,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="35.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        91,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="40.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        53.5,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="45.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                  <RNSVGText
                    content={null}
                    dx={Array []}
                    dy={Array []}
                    fill={3422552064}
                    font={
                      Object {
                        "fontSize": 12,
                        "textAnchor": "end",
                      }
                    }
                    matrix={
                      Array [
                        1,
                        0,
                        -0,
                        1,
                        0,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotate={Array []}
                    x={
                      Array [
                        52,
                      ]
                    }
                    y={
                      Array [
                        16,
                      ]
                    }
                  >
                    <RNSVGTSpan
                      content="50.0"
                      dx={Array []}
                      dy={Array []}
                      font={Object {}}
                      rotate={Array []}
                      x={Array []}
                      y={Array []}
                    />
                  </RNSVGText>
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={64}
                    x2={64}
                    y1={0}
                    y2={166}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={167}
                    x2={167}
                    y1={0}
                    y2={166}
                  />
                  <RNSVGLine
                    propList={
                      Array [
                        "stroke",
                        "strokeWidth",
                        "strokeDasharray",
                      ]
                    }
                    stroke={4290898173}
                    strokeDasharray={
                      Array [
                        "5",
                        "10",
                      ]
                    }
                    strokeWidth={1}
                    x1={271}
                    x2={271}
                    y1={0}
                    y2={166}
                  />
                </RNSVGGroup>
                <RNSVGGroup />
                <RNSVGGroup>
                  <RNSVGPath
                    d="M64 16 167.66666666666669 91 271.33333333333337 166"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4290898173}
                    strokeWidth={3}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGPath
                    d="M64 16 167.66666666666669 91 271.33333333333337 166 271.33333333333337 166 64 166z"
                    fill={
                      Array [
                        1,
                        "fillShadowGradientFrom_0",
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                        "strokeWidth",
                      ]
                    }
                    strokeWidth={0}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGCircle
                    cx={64}
                    cy={16}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={64}
                    cy={16}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                  <RNSVGCircle
                    cx={167.66666666666669}
                    cy={91}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={167.66666666666669}
                    cy={91}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                  <RNSVGCircle
                    cx={271.33333333333337}
                    cy={166}
                    fill={4290898173}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    r="2"
                    responsible={true}
                    stroke={4278190080}
                    strokeWidth="4"
                  />
                  <RNSVGCircle
                    cx={271.33333333333337}
                    cy={166}
                    fill={4294967295}
                    fillOpacity={0}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    propList={
                      Array [
                        "fill",
                        "fillOpacity",
                      ]
                    }
                    r="14"
                    responsible={true}
                  />
                </RNSVGGroup>
                <RNSVGGroup />
                <RNSVGGroup />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`NoteModal renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "white",
          "borderRadius": 10,
          "height": 300,
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TextInput
          collapsable={false}
          multiline={true}
          numberOfLines={10}
          onChangeText={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          placeholder="Note"
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        />
      </View>
      <View>
        <View
          accessibilityRole="button"
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                ]
              }
            >
              Add
            </Text>
          </View>
        </View>
        <View
          accessibilityRole="button"
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                ]
              }
            >
              Close
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`NoteModal renders correctly 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
  testID="NoteView"
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#C1E8FD",
              "borderRadius": 10,
              "height": "auto",
              "marginTop": 25,
              "minHeight": 100,
              "padding": 10,
              "width": "95%",
            },
            Object {
              "elevation": 2,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.27,
              "shadowRadius": 4.65,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontSize": 25,
              "fontWeight": "bold",
            }
          }
        >
          Note: 
          Sun May 15 2022
           
        </Text>
        <Text
          style={
            Object {
              "paddingBottom": 10,
            }
          }
          testID="Notetest"
        >
          Hei hei dette er en note
        </Text>
        <View
          style={
            Object {
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#0274A1",
        "justifyContent": "center",
        "opacity": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 20,
        }
      }
    >
      Add Note
    </Text>
  </View>
</View>
`;
